# dimple_db

./: .gitignore  2025-08-04-caveat-the-messages-below-were-generated-by-the-u.txt  CLAUDE.md  Cargo.toml  LICENSE  README.md  SYNC_ENGINE.md  TESTING.md  TODO.md
.claude/: settings.local.json
docs/: 2025-08-04-caveat-the-messages-below-were-generated-by-the-u.txt  ARCHITECTURE.md  CLAUDE.md  SYNC_ENGINE.md  change-tracking-analysis.md  tests.txt
examples/: quick_start.rs
examples/music_library/: main.rs  types.rs
examples/music_library/sql/01-initial-schema/: up.sql
examples/music_library/sql/02-add-summary/: up.sql
examples/todo-cli/: Cargo.toml  README.md
examples/todo-cli/src/: main.rs
examples/todo-gui/: Cargo.toml  README.md
examples/todo-gui/src/: main.rs
examples/todo-gui/ui/: todo.slint
src/: db.rs  lib.rs  notifier.rs  struct_name.rs  sync.rs
src/changelog/: basic_storage_changelog.rs  batching_storage_changelog.rs  changelog.rs  db_changelog.rs  mod.rs  storage_changelog.rs
src/db/: changelog.rs  changes.rs  core.rs  entity.rs  history.rs  mod.rs  query.rs  reactive.rs  sql_parser.rs  transaction.rs  types.rs
src/storage/: encrypted_storage.rs  memory_storage.rs  mod.rs  s3_storage.rs  slow_memory_storage.rs
src/sync/: encrypted_storage.rs  local_storage.rs  memory_storage.rs  mod.rs  s3_storage.rs  sync_client.rs  sync_engine.rs  sync_storage.rs  sync_target.rs  types.rs
src/sync/storage/: encrypted_storage.rs  local_storage.rs  s3_storage.rs  sync_storage.rs
tests/: db_integration.rs  quick_start.rs  repeated_sync.rs  test_encrypted_sync.rs  test_local_files.rs
