[package]
name = "dimple_db"
version = "0.1.0"
edition = "2021"
description = "DimpleDb is a reactive data store and sync engine for Rust, based on SQLite."
license = "MIT"
repository = "https://github.com/vonnieda/dimple_db"
homepage = "https://github.com/vonnieda/dimple_db"
keywords = ["database", "sqlite", "sync", "s3", "reactive", "localfirst"]
categories = ["database-implementations"]

[dependencies]
age = "0.11.1"
anyhow = "1.0"
include_dir = "0.7.4"
log = "0.4"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rayon = "1.10.0"
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
rusqlite = { version = "0.37", features = ["bundled", "functions"] }
rusqlite_migration = { version = "2.3", features = ["from-directory"] }
rust-s3 = { version = "0.33.0", features = ["sync-native-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rusqlite = "0.40.0"
uuid = { version = "1.17", features = ["v7"] }

[dev-dependencies]
env_logger = "0.11"
