[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI Todo app demonstrating DimpleDb sync capabilities"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
dimple_db = { path = "../.." }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite_migration = { version = "2.3", features = ["from-directory"] }
env_logger = "0.11"
url = "2.5"